# Thermobeacon-server

./: .dockerignore  .drone.yml  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-image.yml
src/: configuration.rs  health_check_server.rs  homeassistant.rs  main.rs  thermobeacon_protocol.rs
