[package]
name = "thermobeacon-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.10", features = ["serde"] }
rand = "0.8.5"
pretty_env_logger = "0.4.0"
log = "0.4"
tokio = { version = "1.21.1", features = ["macros", "rt", "rt-multi-thread"] }
serde_json = "1.0"
packed_struct = "0.10"
config = "0.13"
serde_derive = "1.0"
serde = "1.0"
paho-mqtt = "0.11"
cron-parser = "0.7"
chrono = "0.4"
chrono-tz = "0.8"