[package]
name = "thermobeacon-server"
version = "0.1.0"
edition = "2021"

[profile.release]
# See for binary size information: https://github.com/johnthagen/min-sized-rust
# Using `upx --best --lzma target/release/thermobeacon-server` one can further compress the executable from 5.4M => 977kB, but only for upx version 4.0.1. Version 3.96 does not work.
strip = true # Strip symbols from the binary 12M => 5.9M, 44s build
lto = true # Link time optimzation 5.9M => 5.4M, 51s build


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.10", features = ["serde"] }
rand = "0.8.5"
pretty_env_logger = "0.4.0"
log = "0.4"
tokio = { version = "1.21.1", features = ["macros", "rt", "rt-multi-thread"] }
serde_json = "1.0"
packed_struct = "0.10"
config = "0.13"
serde_derive = "1.0"
serde = "1.0"
paho-mqtt = "0.11"
cron-parser = "0.7"
chrono = "0.4"
chrono-tz = "0.8"