[package]
name = "thermobeacon-server"
version = "0.1.0"
edition = "2021"

[profile.release]
# See for binary size information: https://github.com/johnthagen/min-sized-rust
# Using `upx --best --lzma target/release/thermobeacon-server` one can further compress the executable from 5.4M => 977kB, but only for upx version 4.0.1. Version 3.96 does not work.
strip = true # Strip symbols from the binary 12M => 5.9M, 44s build
lto = true   # Link time optimzation 5.9M => 5.4M, 51s build


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.11", features = ["serde"] }
rand = "0.8.5"
pretty_env_logger = "0.5"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
serde_json = "1.0"
packed_struct = "0.10"
config = "0.14"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
paho-mqtt = "0.12"
cron-parser = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9.0"
actix-web = "4.4"
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15.0"

[patch.crates-io]
# Lazy static is required for 'invocation' feature of jni, but produces some type errors in the latest published verson 1.4 
lazy_static = { git = "https://github.com/rust-lang-nursery/lazy-static.rs", branch = "master" }
